--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 @font-face {
     font-family: a;
-    src: url(./sf-pro-icons_light.woff2);
+    src: url(./sf-pro-display_regular.woff2);
 }
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: a;
 }
 
 html,body{
